--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Build and tag
         run: make build_and_tag save_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
         
-      - name: Upload images artifact
-        uses: actions/upload-artifact@v3
+      - uses: actions/cache@v3
         with:
-          name: tmp-images
           path: tmp-images
+          key: tmp-images-${{github.run_number}}
+          restore-keys: tmp-images-${{github.run_number}}
         
   test_and_scan:
     runs-on: ubuntu-latest
@@ -47,11 +47,11 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Download images artifact
-        uses: actions/download-artifact@v3
+      - uses: actions/cache@v3
         with:
-          name: tmp-images
           path: tmp-images
+          key: tmp-images-${{github.run_number}}
+          restore-keys: tmp-images-${{github.run_number}}
 
       - name: Load images
         run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
@@ -89,12 +89,12 @@ jobs:
   
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-  
-      - name: Download images artifact
-        uses: actions/download-artifact@v3
+
+      - uses: actions/cache@v3
         with:
-          name: tmp-images
           path: tmp-images
+          key: tmp-images-${{github.run_number}}
+          restore-keys: tmp-images-${{github.run_number}}
   
       - name: Load images
         run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
@@ -128,11 +128,11 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Download images artifact
-        uses: actions/download-artifact@v3
+      - uses: actions/cache@v3
         with:
-          name: tmp-images
           path: tmp-images
+          key: tmp-images-${{github.run_number}}
+          restore-keys: tmp-images-${{github.run_number}}
 
       - name: Load images
         run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
@@ -165,11 +165,11 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Download images artifact
-        uses: actions/download-artifact@v3
+      - uses: actions/cache@v3
         with:
-          name: tmp-images
           path: tmp-images
+          key: tmp-images-${{github.run_number}}
+          restore-keys: tmp-images-${{github.run_number}}
 
       - name: Load images
         run: make load_all_images docker_username=${{ secrets.DOCKER_USERNAME }} version=alpha-${{github.run_number}}
