--- a/app/src/AspNetCore.Examples.ProductService.Domain/AspNetCore.Examples.ProductService.Domain.csproj
+++ b/app/src/AspNetCore.Examples.ProductService.Domain/AspNetCore.Examples.ProductService.Domain.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>AspNetCore.Examples.ProductService</RootNamespace>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
